remove height from images to avoid distortion at different screen sizes

--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@
       top: 0;
       left: 0;
       min-width: 100%;
-      height: 500px;
     }
 
     .carousel-caption {
